Homepage mobile overflow fix

--- a/css/_main-only-normal.scss
+++ b/css/_main-only-normal.scss
@@ -492,8 +492,8 @@ span._bar {
 
 //Footer Page Nav
 .post-load-more {
-	margin: 30px 0px;
-	width: 100%;
+	margin: 30px auto;
+	width: 95%;
 	border: 1px solid #dcdcdc;
 	line-height: 45px;
 	text-align: center;
